day4/workshop/task/frontend-deploymen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: krajewskim/frontend
        resources: {}
        volumeMounts:
        - name: cm
          mountPath: /app/.env.development # only key specified here will be taken
          subPath: env # updating by cm change does not work
      volumes:
        - name: cm
          configMap:
            name: apka
